fixed layout shift on hover

--- a/src/styles/flexTextSection.css
+++ b/src/styles/flexTextSection.css
@@ -4,6 +4,7 @@
     padding: 1rem 1.5rem;
     background-color: rgba(182, 180, 180, 0.266);
     border-radius: 1em;
+    border: 3px solid transparent;
 }
 .textBox:hover{
     cursor: pointer;
